# cairnid

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  deny.toml  package.json
apps/api/: Cargo.toml
apps/api/src/: admin_operations.rs  api_contract_command.rs  audit_operations.rs  browser_origin_smoke.rs  config.rs  conformance_operations.rs  dependency_policy_operations.rs  email.rs  email_outbox_operations.rs  healthcheck.rs  key_encryption_operations.rs  main.rs  oidc_metadata_smoke.rs  operations_commands.rs  operations_evidence.rs  operations_preflight.rs  restore_operations.rs  scim_commands.rs  scim_profile.rs  scim_smoke.rs  security_header_smoke.rs  signing_key_operations.rs
apps/api/src/audit_operations/: export.rs  retention.rs
apps/api/src/audit_operations/export/: archive.rs  options.rs  receipt.rs
apps/api/src/browser_origin_smoke/: resources.rs  response.rs  routes.rs  tests.rs  types.rs
apps/api/src/config/: audit.rs  email.rs  network.rs  origin.rs  scim.rs
apps/api/src/conformance_operations/: preflight.rs  result_template.rs  static_config.rs  static_registration.rs  tests.rs  types.rs  validation.rs
apps/api/src/dependency_policy_operations/: checks.rs  command.rs  report.rs  tests.rs  types.rs  workspace.rs
apps/api/src/email/: delivery.rs  provider.rs  rendering.rs
apps/api/src/email_outbox_operations/: command.rs  errors.rs  lifecycle_smoke.rs  provider.rs  report.rs  tests.rs  types.rs
apps/api/src/http/: account_lifecycle.rs  account_routes.rs  admin_audit.rs  admin_groups.rs  admin_oidc.rs  admin_query.rs  admin_users.rs  api_contract.rs  api_response.rs  app_settings.rs  auth_routes.rs  authorization.rs  browser_sessions.rs  client_policy.rs  content_type.rs  cookies.rs  end_session.rs  mfa.rs  mfa_routes.rs  mod.rs  oauth_client.rs  oauth_http.rs  oauth_routes.rs  oauth_token.rs  oidc_browser_routes.rs  public_metadata.rs  request_body.rs  request_context.rs  router.rs  scim_auth.rs  scim_bulk.rs  scim_input.rs  scim_metadata.rs  scim_operations.rs  scim_projection.rs  scim_protocol.rs  scim_query.rs  scim_resource.rs  scim_routes.rs  security.rs  (+4 more)
apps/api/src/http/account_lifecycle/: delivery.rs  (+3 more)
apps/api/src/oidc_metadata_smoke/: discovery.rs  jwks.rs  resources.rs  tests.rs  types.rs  validation.rs
apps/api/src/operations_commands/: args.rs  checks.rs  evidence.rs  smoke.rs
apps/api/src/operations_evidence/: dispatch.rs  operations_drill.rs  plan.rs  registry.rs  scaffold.rs  scim.rs  tests.rs  timestamp.rs  types.rs  validation.rs
apps/api/src/operations_preflight/: email_delivery.rs  failure_policy.rs  scim.rs  signing.rs
apps/api/src/restore_operations/: checks.rs  report.rs  tests.rs  types.rs
apps/api/src/scim_profile/: kind.rs  profile.rs  smoke_template.rs  tests.rs  types.rs  validation.rs
apps/api/src/scim_smoke/: bulk.rs  checks.rs  groups.rs  helpers.rs  http.rs  runner.rs  types.rs  users.rs
apps/api/src/security_header_smoke/: assertions.rs  resources.rs  targets.rs  tests.rs  types.rs
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/cli/tests/: cli_contract.rs
apps/mcp/: Cargo.toml
apps/mcp/src/: main.rs
apps/mcp/testdata/contract/: evidence-check-success.json  evidence-manifest-success.json  evidence-plan-success.json  evidence-status-success.json  incomplete-check-error.json  request-error-empty-evidence-dir.json  tools-list-schemas.json
apps/mcp/tests/: stdio_smoke.rs
crates/audit/: Cargo.toml
crates/audit/src/: builder.rs  lib.rs  redaction.rs  tests.rs
crates/authn/: Cargo.toml
crates/authn/src/: error.rs  lib.rs  password.rs  pkce.rs  secrets.rs  tests.rs  totp.rs  webauthn_config.rs
crates/database/: Cargo.toml
crates/database/src/: account_tokens.rs  audit.rs  auth_sessions.rs  codec.rs  consent_grants.rs  email_outbox.rs  groups.rs  lib.rs  mfa.rs  oauth_tokens.rs  oidc_clients.rs  organizations.rs  rate_limit.rs  repository_helpers.rs  rows.rs  signing_keys.rs  types.rs  users.rs
crates/database/src/account_tokens/: delivery.rs  password_change.rs  password_recovery.rs
crates/database/src/auth_sessions/: browser_sessions.rs  rotation.rs
crates/database/src/consent_grants/: authorizations.rs  listings.rs  revocation.rs
crates/database/src/email_outbox/: delivery.rs  evidence.rs
crates/database/src/groups/: break_glass.rs  memberships.rs
crates/database/src/mfa/: credentials.rs  metadata.rs  webauthn_challenges.rs
crates/database/src/oauth_tokens/: access_tokens.rs  authorization_codes.rs  refresh_tokens.rs
crates/database/src/oidc_clients/: clients.rs  consent_policies.rs  listings.rs  runtime_credentials.rs  secrets.rs  status.rs
crates/database/src/rows/: account.rs  audit.rs  authn.rs  core.rs  email.rs  groups.rs  oauth.rs  oidc.rs  signing.rs  users.rs
crates/database/src/types/: consent.rs  email.rs  filters.rs  groups.rs  oidc.rs  passwords.rs  sessions.rs  signing.rs  users.rs
crates/database/src/users/: bootstrap.rs  lifecycle.rs  queries.rs
crates/database/tests/: mfa_recovery_code_invariants.rs  postgres_migrations.rs  postgres_protocol_invariants.rs
crates/domain/: Cargo.toml
crates/domain/src/: accounts.rs  audit.rs  email.rs  error.rs  groups.rs  ids.rs  lib.rs  mfa.rs  oidc.rs  organization.rs  signing.rs  tests.rs  users.rs  validation.rs
crates/oidc/: Cargo.toml
crates/oidc/src/: authorization.rs  claims.rs  error.rs  lib.rs  metadata.rs  oauth_types.rs  redirects.rs  signing.rs  tests.rs
crates/oidc/src/authorization/: parsing.rs  pkce.rs  request.rs  scopes.rs  types.rs
crates/oidc/src/signing/: encryption.rs  jwk.rs  keys.rs  material.rs
crates/operations/: Cargo.toml
crates/operations/src/: lib.rs  operations_evidence.rs
crates/operations/src/operations_evidence/: artifact_check.rs  dispatch.rs  email_evidence.rs  oidc.rs  operations_readiness.rs  plan.rs  public_surface.rs  redaction.rs  release_assets.rs  scaffold.rs  scim.rs  tests.rs  types.rs  validation.rs
(+343 files in other folders)
