[workspace]
resolver = "3"
members = [
  "apps/api",
  "apps/cli",
  "apps/mcp",
  "crates/audit",
  "crates/authn",
  "crates/database",
  "crates/domain",
  "crates/oidc",
  "crates/operations",
]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.94"

[workspace.dependencies]
aes-gcm = { version = "0.10.3", features = ["std", "getrandom"] }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.9", features = ["macros"] }
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["aws_lc_rs", "use_pem"] }
openssl = "0.10.75"
rand = "0.9.2"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
rmcp = { version = "1.7.0", default-features = false, features = ["server", "macros", "transport-io"] }
schemars = "1.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time", "json", "migrate", "derive"] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["serde", "serde-well-known", "formatting", "parsing"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "signal", "net"] }
totp-rs = { version = "5.7.1", features = ["otpauth"] }
tower = "0.5.2"
tower-http = { version = "0.6.11", features = ["cors", "request-id", "sensitive-headers", "trace", "timeout"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
url = "2.5.8"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
webauthn-rs = { version = "0.5.4", features = ["danger-allow-state-serialisation"] }
zeroize = { version = "1.8.2", features = ["derive"] }

cairn-audit = { path = "crates/audit", version = "0.1.0" }
cairn-authn = { path = "crates/authn", version = "0.1.0" }
cairn-database = { path = "crates/database", version = "0.1.0" }
cairn-domain = { path = "crates/domain", version = "0.1.0" }
cairn-oidc = { path = "crates/oidc", version = "0.1.0" }
cairn-operations = { path = "crates/operations", version = "0.1.0" }
