[package]
name = "cairn-api"
version = "0.1.0"
description = "Cairn Identity Axum API and OIDC provider."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
publish.workspace = true

[dependencies]
axum.workspace = true
base64.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
cairn-audit.workspace = true
cairn-authn.workspace = true
cairn-database.workspace = true
cairn-domain.workspace = true
cairn-oidc.workspace = true
cairn-operations.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
openssl.workspace = true
sqlx.workspace = true
