[package]
name = "cairnid"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "cairnid"
path = "src/main.rs"

[dependencies]
cairn-operations.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
