[package]
name = "cairnid"
version = "0.1.0-rc.1"
description = "Operator CLI for Cairn Identity release evidence workflows."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
publish.workspace = true

[[bin]]
name = "cairnid"
path = "src/main.rs"

[dependencies]
cairn-operations.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true

[dev-dependencies]
flate2.workspace = true
sha2.workspace = true
tar.workspace = true
zip.workspace = true
