[package]
name = "cairnid-mcp"
version = "0.1.0"
description = "Local stdio MCP server for read-only Cairn Identity release evidence inspection."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
publish.workspace = true

[[bin]]
name = "cairnid-mcp"
path = "src/main.rs"

[dependencies]
cairn-operations.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
