[package]
name = "cairn-audit"
version = "0.1.0-rc.1"
description = "Audit event builders and redaction support for Cairn Identity."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
publish.workspace = true

[dependencies]
serde_json.workspace = true
cairn-domain.workspace = true
time.workspace = true
uuid.workspace = true
