[package]
name = "cairn-authn"
version = "0.1.0"
description = "Authentication primitives for Cairn Identity."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
publish.workspace = true

[dependencies]
argon2.workspace = true
base64.workspace = true
rand.workspace = true
secrecy.workspace = true
serde.workspace = true
sha2.workspace = true
cairn-domain.workspace = true
thiserror.workspace = true
totp-rs.workspace = true
uuid.workspace = true
webauthn-rs.workspace = true
zeroize.workspace = true
