[package]
name = "cairn-database"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde_json.workspace = true
sqlx.workspace = true
cairn-domain.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
cairn-authn.workspace = true
tokio.workspace = true
