[package]
name = "cairn-domain"
version = "0.1.0-rc.1"
description = "Core organization-scoped domain types for Cairn Identity."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
url.workspace = true
uuid.workspace = true
