[package]
name = "cairn-oidc"
version = "0.1.0-rc.1"
description = "OIDC and OAuth policy, discovery, claims, and signing support for Cairn Identity."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
publish.workspace = true

[dependencies]
aes-gcm.workspace = true
base64.workspace = true
jsonwebtoken.workspace = true
openssl.workspace = true
serde.workspace = true
serde_json.workspace = true
cairn-authn.workspace = true
cairn-domain.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
zeroize.workspace = true
