[package]
name = "cairn-operations"
version = "0.1.0-rc.1"
description = "Release evidence and operations validators for Cairn Identity."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
publish.workspace = true

[dependencies]
flate2.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
thiserror.workspace = true
time.workspace = true
url.workspace = true
uuid.workspace = true
zip.workspace = true
